# wfrp_sim

./: .gitignore  CMakeLists.txt  README.md  wfrp_simulator.cpp
.github/workflows/: build_and_test.yml  test_die.yml
configs/: items.toml  test.toml
include/: action_node.hpp  action_provider.hpp  attribute.hpp  condition.hpp  condition_provider.hpp  critical_provider.hpp  die.hpp  engagement.hpp  entity.hpp  feature.hpp  overhead.hpp  skill.hpp  state.hpp  state_provider.hpp  utility.hpp
source/: action_node.cpp  action_provider.cpp  attribute.cpp  condition.cpp  condition_provider.cpp  critical_provider.cpp  die.cpp  engagement.cpp  entity.cpp  feature.cpp  overhead.cpp  skill.cpp  state.cpp  state_provider.cpp  utility.cpp
test/: CMakeLists.txt  test_die_roll.cpp
tests/: CMakeLists.txt  test_die_roll.cpp
